# wordstock

./: .gitignore  .travis.yml  Dockerfile  README.md
patterns/: pattern1.txt  pattern2.txt  pattern3.txt  pattern5.txt  seedfile
wordstock/: .coveragerc  requirements.txt  setup.cfg  setup.py  stock.py  test-requirements.txt
wordstock/tests/: base.py  create_dataset.py  test_stock.py  test_stock_functional.py  test_stock_unit.py
wordstock/tests/data/smoke/: file2279.txt
wordstock/tests/patterns/smoke/impossible_pattern/: pattern.txt
