#
# (c) Copyright 2019 Hewlett Packard Enterprise Development LP
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations
# under the License.
#

[metadata]
name = wordstock
summary = word counting utility
description-file =
    README.md
author = Nithya Ganesan
author-email = nithya.ganesan@hpe.com
license = Proprietary
keywords = wordstock pandas
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 1 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent

[entry_points]
console_scripts =
  stock = wordstock.stock.main:main

[files]
packages = wordstock

[easy_install]
